--- a/CarsApp-main/nbproject/private/private.properties
+++ b/CarsApp-main/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/ivan/.netbeans/17/build.properties
+user.properties.file=C:\\Users\\nicoc\\AppData\\Roaming\\NetBeans\\16\\build.properties
